<resources>
    <string name="app_name">RickAndMortyRetroFitNew</string>
    <string name="character_avatar">character avatar</string>
    <string name="sign_in">Sign In</string>
    <string name="continue_text">Continue</string>
    <string name="not_a_member_sign_up">Not a Member? Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="episodes">Episodes</string>
    <string name="client_id">1001887869213-sd4nn17g155slmd4a88qf0kg728p7teo.apps.googleusercontent.com</string>

</resources>